--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -31,7 +31,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="delahoz.floor.detection.PicActivity"
+            android:name="delahoz.floor.detection.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
             <intent-filter>
