--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,12 +31,12 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="delahoz.floor.detection.PicActivity"
+            android:name="delahoz.floor.detection.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
